add conference reminder and minor fixes